# follow-up-ai-calling-system

./: .dockerignore  .gitignore  Dockerfile  auto_call_scheduler_spec.md  docker-compose.yml  output.txt
.github/workflows/: ci.yml  (+1 more)
backend/: .dockerignore  .env.example  .env.production.example  pyproject.toml  test_vapi.py
backend/alembic/: env.py
backend/alembic/versions/: 03fe9af8fe7c_add_clients_table.py  5f8d7b2f6c41_add_missing_client_status_enum_values.py  63b587074ea9_add_rescheduled_to_callstatus.py  77e748f561b0_add_calls_and_reschedules_tables.py  9d0090a203db_expand_clients_for_automation.py  b2f8a7b7f3f1_add_app_settings_table.py
backend/app/: main.py  seed.py
backend/app/core/: config.py  security.py
backend/app/database/: session.py  users.py
backend/app/interactors/: auth.py  client.py  settings.py
backend/app/models/: __init__.py  app_settings.py  call.py  client.py  user.py
backend/app/routes/: auth.py  calls.py  client.py  dashboard.py  notifications.py  settings.py  webhooks.py
backend/app/schemas/: auth.py  call.py  client.py  dashboard.py  settings.py
backend/app/services/: __init__.py  call_scheduler.py  calling_window.py  client_scheduling.py  notifier.py  phone_numbers.py  reschedule_service.py  token_service.py  us_area_code_timezones.py  vapi_client.py  webhook_verifier.py
backend/data/: app.db
backend/outbound_ai_calling_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: production-deploy.md
frontend/: build_log.txt  package-lock.json  package.json  tailwind.config.js
scripts/: deploy_production.sh
(+42 files in other folders)
